Fix Main menu spacing

--- a/less/style.less
+++ b/less/style.less
@@ -72,7 +72,7 @@ body {
   font-size: 19px;
   text-transform: uppercase;
   .nav > li > a {
-    padding: 12px 15px 8px;
+    padding: 11px 15px 5px;
     border-right: 1px solid #848787;
   }
 }
